# sboard

./: Cargo.toml  LICENSE  README.md
src/: app.rs  display.rs  editor.rs  job_handler.rs  job_query_info.rs  main.rs  parser.rs  ui.rs
src/jobs/: job_handler.rs  job_parser.rs  mod.rs
test_data/: 10_random_users.txt
tests/data/: mixed_running_failed_completed.txt
