[package]
name = "sboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26.1", features = ["all-widgets"] }
crossterm = "0.26"
clap = { version = "4.3.23", features = ["derive"] }
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tui-textarea = "0.4.0"
better-panic = "0.3.0"
phf = { version = "0.11.2", features = ["macros"] }
tui-popup = "0.2.2"
